Changes to be committed: 	modified:   controllers/orderController.js 	modified:   docs/API.md 	modified:   models/orderModel.js 	modified:   swagger.yaml
